<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sport.abox.BoxerMovementLibraryActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvBoxerMovementLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/boxer_movement_library"
            android:textSize="30sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <CheckBox
                        android:id="@+id/cbSelectAllBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/select_all"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        />

                    <View
                        android:id="@+id/divider7"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbHook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/hook"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider10"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbCross"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/cross"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbSideStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/side_step"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbSwing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/swing"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbOverhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/overhead"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbDuck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/duck"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbSwayingWay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/swaying_way"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbJolt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/jolt"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbUppercut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/uppercut"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider9"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/cbJab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/jab"
                        android:textSize="15sp"
                        />

                    <View
                        android:id="@+id/divider11"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@android:color/darker_gray"
                        />

                    <CheckBox
                        android:id="@+id/chTurningAside"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/turning_aside"
                        android:textSize="15sp"
                        />

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
